@@ -5,12 +5,14 @@ METADATA = Atk.metadata
 SYMBOLS =
 references = ../glib/glib-sharp.dll
 
-sources = 
+sources = 			\
+	TextChangedDetail.cs
 
 customs =			\
 	Global.custom		\
 	Misc.custom		\
 	Object.custom		\
+	TextAdapter.custom	\
 	Util.custom
 
 add_dist =
